--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,11 +6,13 @@ authors = ["xcfrg <30675315+xcfrg@users.noreply.github.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = "^3.9"
 Flask-Cors = "^3.0.10"
 Flask = "^2.1.2"
 Flask-PyMongo = "^2.3.0"
 python-dotenv = "^0.20.0"
+Flask-JWT-Extended = "^4.4.0"
+argon2-cffi = "^21.3.0"
 
 [tool.poetry.dev-dependencies]
 black = "^22.3.0"
